# triple_banana

./: BASE  BUILD.gn  CHANGELOG.md  README.md  VERSION  proguard.flags  triple_banana.gni  triple_banana_sources.gni
banana_cake/cpp/: cake_local_state.cc  cake_subresource_filter.cc
banana_cake/providers/: CakeInterfaceProvider.java  InterfaceProvider.java
browser/java/: AndroidManifest.xml
hsts/: BUILD.gn  hsts.json  hsts.pins
modules/: BUILD.gn
modules/adblock/java/org/triple/banana/adblock/: FilterLoaderImpl.java
modules/authentication/java/org/triple/banana/authentication/: ActivityBasedBackend.java  AuthenticationActivity.java  AuthenticationManagerImpl.java  AuthenticatorBaseActivity.java  BiometricPromptActivity.java  BiometricPromptAuthenticationActivity.java  FallbackBackend.java  FingerprintManagerActivity.java  FingerprintManagerAuthenticationActivity.java  KeyguardActivity.java  KeyguardAuthenticationActivity.java  TranslucentActivity.java
modules/encrypter/java/org/triple/banana/encrypter/: Encrypter.java  EncrypterManagerImpl.java  FakeEncrypter.java  KeyStoreEncrypter.java
modules/hello/: hello.cc  hello.h
modules/hello/java/org/triple/banana/hello/: HelloImpl.java
modules/public/: connector.h  coroutine.h  interfaces.h  module_service.cc  module_service.h  string_view.h
modules/public/java/org/triple/banana/modules/: Connector.java  InterfaceRegistrar.java
modules/public/manifest/: manifest.cc  manifest.h
modules/public/mojom/: adblock.mojom  authentication.mojom  download.mojom  encrypter.mojom  hello.mojom  media.mojom  remote_control.mojom
res/anim/: close_to_bottom.xml  open_from_bottom.xml
res/drawable/: adblock.xml  advanced_settings.xml  atmegame_logo.xml  btn_done.xml  controls_background.xml  ic_add_a_photo_black_24dp.xml  ic_add_black_24dp.xml  ic_add_secret_tab_black_24dp.xml  ic_add_to_home_black_24dp.xml  ic_archive_black_24dp.xml  ic_arrow_backward.xml  ic_arrow_backward_white.xml  ic_arrow_forward.xml  ic_backward.xml  ic_brightness_3_black_24dp.xml  ic_brightness_up.xml  ic_brightness_up_32dp.xml  ic_clear_browsing_data.xml  ic_close.xml  ic_close_32dp.xml  ic_close_current_tab.xml  ic_closed_caption.xml  ic_dark_black_24dp.xml  ic_desktop_black_24dp.xml  ic_done.xml  ic_download.xml  ic_edit.xml  ic_favorite_border_black_24dp.xml  ic_filter_black_24dp.xml  ic_find_in_page_black_24dp.xml  ic_fingerprint_black_24dp.xml  ic_folder_special_black_24dp.xml  ic_forward.xml  ic_forward_48dp.xml  ic_language_black_24dp.xml  ic_local_printshop_black_24dp.xml  ic_lock.xml  ic_lock_32dp.xml  ic_lock_opened.xml  (+48 more)
res/drawable-v21/: ic_fingerprint_black_36dp.xml
services/hello/: BUILD.gn  hello.cc  hello.h  hello_service.cc  hello_service.h
services/hello/android/java/src/org/triple/banana/hello/: InterfaceRegistrar.java
services/hello/public/cpp/: manifest.cc  manifest.h
services/hello/public/mojom/: constants.mojom  hello.mojom
src/: AndroidManifest.xml
tools/: apply_patches  banana  banana.sh  update_patches
upstream/: 0001-TripleBanana-Add-a-dependency-for-triple-banana-proj.patch  tb_BUILD.gn.patch  tb_base_android_android_image_reader_compat.cc.patch  tb_base_android_java_src_org_chromium_base_library_loader_LibraryLoader.java.patch  tb_base_feature_list.cc.patch  tb_base_feature_list.h.patch  tb_build_android_gyp_proguard.py.patch  tb_build_config_BUILD.gn.patch  tb_build_config_compiler_BUILD.gn.patch  tb_build_config_compiler_compiler.gni.patch  tb_chrome_android_BUILD.gn.patch  tb_chrome_android_chrome_public_apk_tmpl.gni.patch  tb_chrome_android_features_start_surface_internal_dummy_java_src_org_chromium_chrome_features_start_surface_ExploreSurfaceCoordinator.java.patch  tb_chrome_android_feed_dummy_java_src_org_chromium_chrome_browser_feed_FeedNewTabPage.java.patch  tb_chrome_android_feed_dummy_java_src_org_chromium_chrome_browser_feed_TestNetworkClient.java.patch  tb_chrome_android_java_AndroidManifest.xml.patch  tb_chrome_android_java_res_layout_bottom_control_container.xml.patch  tb_chrome_android_java_res_menu_main_menu.xml.patch  tb_chrome_android_java_res_values_ids.xml.patch  tb_chrome_android_java_res_xml_main_preferences.xml.patch  tb_chrome_android_java_res_xml_privacy_preferences.xml.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_ChromeActivity.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_ChromeApplication.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_ChromeTabbedActivity.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_about_settings_AboutChromeSettings.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_app_ChromeActivity.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_app_appmenu_AppMenuPropertiesDelegateImpl.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_appmenu_AppMenuPropertiesDelegateImpl.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_externalnav_ExternalNavigationHandler.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_firstrun_DefaultSearchEngineFirstRunFragment.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_firstrun_FirstRunActivity.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_firstrun_FirstRunFlowSequencer.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_flags_FeatureUtilities.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_fullscreen_FullscreenHtmlApiHandler.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_infobar_SavePasswordInfoBar.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_locale_LocaleManager.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_password_manager_settings_PasswordSettings.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_privacy_settings_PrivacySettings.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_settings_MainPreferences.java.patch  tb_chrome_android_java_src_org_chromium_chrome_browser_settings_MainSettings.java.patch  (+154 more)
(+620 files in other folders)
